@@ -95,7 +95,7 @@ public final class SharedDeflaterDetector {
             final String label = (name != null) ? name : kind + "@" + id;
             s = instances.computeIfAbsent(id, k -> new State(label, kind));
         }
-        s.accessingThreadIds.add(thread.getId());
+        s.accessingThreadIds.add(thread.threadId());
         s.accessingThreadNames.add(thread.getName());
     }
 
